<resources>
    <string name="app_name">Gallery 21</string>

    <!--    SettingsActivity-->
    <string name="adjustments">Adjustments</string>
    <string name="dark_theme">Dark theme</string>
    <string name="enable_dark_theme">Enable dark theme</string>
    <string name="disable_dark_theme">Disable dark theme</string>
    <string name="font_size">Font size</string>
    <string name="font_size_second">Change the font size of the text the app</string>
    <string name="supports">Supports</string>
    <string name="share_app">Share app to friends</string>

    <!--    SharingActivity-->
    <string name="create_post">Create post...</string>

    <!--    UploaderActivity-->
    <string name="caption">Your caption goes here...</string>
    <string name="create_a_new_post">Create a new post...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>