<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_settings"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/distance_between_settings"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_to_item_titles"
            android:textAllCaps="true"
            android:textSize="@dimen/font_size_list_item_titles"
            android:textStyle="bold"
            android:text="@string/adjustments" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_dark_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/distance_between_items"
                android:orientation="vertical"
                android:padding="10dp"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/distance_to_second"
                    android:textSize="@dimen/font_size_list_item_titles"
                    android:text="@string/dark_theme" />

                <TextView
                    android:id="@+id/tv_dark_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_captions"
                    android:text="@string/enable_dark_theme" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_to_item_titles"
            android:textAllCaps="true"
            android:textSize="@dimen/font_size_list_item_titles"
            android:textStyle="bold"
            android:text="@string/supports" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/distance_between_items"
                android:orientation="vertical"
                android:padding="10dp"
                android:foreground="?selectableItemBackground">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_list_item_titles"
                    android:text="@string/share_app" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>